--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 02 10:33:25 CST 2016
+#Thu Feb 02 07:37:21 CST 2017
+ndk.dir=/Users/johnfriedman/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/johnfriedman/Library/Android/sdk
